--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,10 @@
 name: deploy
 
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -33,6 +38,3 @@ jobs:
 
       - name: Deploy to GHCR
         run: bazel run //:push
-
-      - name: Trigger deploy on Render
-        run: curl ${{ secrets.RENDER_DEPLOY_HOOK }}
