--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
 jobs:
-  test:
+  deploy-imaage:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -27,10 +27,6 @@ jobs:
           mkdir -p "${GITHUB_WORKSPACE}/bin/"
           mv bazelisk-linux-amd64 "${GITHUB_WORKSPACE}/bin/bazel"
           chmod +x "${GITHUB_WORKSPACE}/bin/bazel"
-
-      # yes we want this to be separate because we want to catch both build errors and explicit test errors
-      - name: Build all targets
-        run: bazel build //...
 
       - name: Login to GitHub Container Registry
         run: echo ${{ secrets.GH_TOKEN}} | docker login ghcr.io -u ianmkim --password-stdin
